--- a/erp/templates/erp/index.html
+++ b/erp/templates/erp/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>Página Inicial do Projeto ERP</h1>
+    <p><a href="{% url 'erp:listar_funcionarios' %}">Ver Funcionários</a></p>
     <p><a href="{% url 'erp:listar_produto' %}">Ver Produtos</a></p>
+    <p><a href="{% url 'erp:listar_venda' %}">Ver Vendas</a></p>
 </body>
 </html>
