--- a/erp/templates/erp/produtos/listar.html
+++ b/erp/templates/erp/produtos/listar.html
@@ -34,7 +34,8 @@
                 </tr>
             {% endfor %}
         </tbody>
-        <p><a href="{% url 'erp:cadastro_produto' %}">Cadastrar Produto</a></p>
+        <p><a href="{% url 'erp:cadastro_produto' %}">Cadastrar</a></p>
+        <a href="{% url 'erp:home' %}">Voltar </a>
     </table>
 </body>
 </html>
